fix static values

--- a/fuel_route_project/templates/index.html
+++ b/fuel_route_project/templates/index.html
@@ -45,12 +45,12 @@
     <!-- Control panel for user input -->
     <div class="controls">
         <label>Start Location (lat, lon):</label>
-        <input type="text" id="start_lat" value="40.712776">
-        <input type="text" id="start_lon" value="-74.005974">
+        <input type="text" id="start_lat" placeholder="40.712776">
+        <input type="text" id="start_lon" placeholder="-74.005974">
         <br>
         <label>End Location (lat, lon):</label>
-        <input type="text" id="end_lat" value="30.2672">
-        <input type="text" id="end_lon" value="-97.7431">
+        <input type="text" id="end_lat" placeholder="30.2672">
+        <input type="text" id="end_lon" placeholder="-97.7431">
         <br>
         <button onclick="calculateRoute()">Find Route</button>
     </div>
